Fix bug #1126:  Ray sensor detects a near sensor attached to the same object and then goes into an endless loop trying to ignore it.